# testerkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE-0.1.0.md  RELEASING.md  ROADMAP.md  SECURITY.md  litmus.yaml  pyproject.toml  pyrightconfig.json  testerkit.yaml
.github/: PULL_REQUEST_TEMPLATE.md
branding/: DESIGN-SPEC.md  FONTS.md  generate_branding.py
demo/: CLAUDE_DESKTOP_SETUP.md  DEMO_GUIDE.md  README.md  WORKFLOW_DEMO.md  interactive_station.py  litmus.yaml  pytest.ini  run_demo.py
docs/: api.md  architecture-erd.md  capability-examples.md  capability-schema.md  client.md  compare.md  comparison.md  concepts.md  configuration.md  connect.md  custom-outputs.md  highlight-reel.md  index.md  models-erd.md  outputs.md  overview.md  pytest-plugin.md  quickstart.md
evals/: README.md  check_grader.py  grader.py  runner.py  tasks.py
examples/: README.md  interactive_station.py  pyrightconfig.json  pytest.ini
examples/01-bringup/: README.md  pyproject.toml  pytest.ini
examples/01-bringup/tests/: test_smoke.py  test_smoke.yaml
examples/01-vanilla/: README.md  conftest.py  litmus.yaml  pyproject.toml  pytest.ini
examples/01-vanilla/drivers/: dmm.py
examples/01-vanilla/tests/: test_rail.py
examples/02-station/: README.md  conftest.py  litmus.yaml  pyproject.toml  pyrightconfig.json  pytest.ini
examples/02-station/catalog/: generic_eload.yaml
examples/02-station/drivers/: __init__.py
examples/02-station/products/: power_board.yaml
examples/02-station/stations/: demo_station_001.yaml
examples/02-station/tests/: test_dual_power_board_smoke.py  test_dual_power_board_smoke.yaml  test_power_board_smoke.py  test_power_board_smoke.yaml
examples/02-verify/: README.md  conftest.py  litmus.yaml  pyproject.toml  pytest.ini  testerkit.yaml
examples/02-verify/drivers/: __init__.py
examples/02-verify/tests/: test_rail.py
examples/03-inline-limits/: README.md  conftest.py  litmus.yaml  pyproject.toml  pytest.ini
examples/03-inline-limits/drivers/: dmm.py
examples/03-inline-limits/tests/: test_rail.py  test_sequence.py
examples/03-profiles/: README.md  REVIEW.md  conftest.py  litmus.yaml  pyproject.toml  pytest.ini
examples/03-profiles/catalog/chroma/: chroma_63103a.yaml
examples/03-profiles/catalog/keysight/: keysight_34465a.yaml  keysight_e36313a.yaml
examples/03-profiles/drivers/: __init__.py  eload.py
examples/03-profiles/stations/: bench_alpha.yaml
examples/03-profiles/tests/: test_power_on.py  test_power_on.yaml  test_rails.py  test_regulation.py  test_regulation.yaml
examples/04-sidecar-markers/: README.md  conftest.py  litmus.yaml  pyproject.toml  testerkit.yaml
examples/04-sidecar-markers/drivers/: psu.py
examples/04-sidecar-markers/tests/: test_rail.py  test_rail.yaml
examples/05-part-spec/: README.md  conftest.py  litmus.yaml  pyproject.toml  pytest.ini
examples/05-part-spec/drivers/: __init__.py  psu.py
examples/05-part-spec/parts/: buck_3v3.yaml
examples/05-part-spec/tests/: test_rail.py  test_rail.yaml
examples/05-product-spec/: README.md  litmus.yaml  pyproject.toml  pytest.ini
examples/05-product-spec/tests/: test_rail.py  test_rail.yaml
examples/05-station-catalog/: README.md  litmus.yaml  pyproject.toml
examples/05-station-catalog/tests/: test_rail.py  test_rail.yaml
examples/06-product-binding/: README.md  pyproject.toml
examples/06-product-binding/drivers/: psu.py
examples/06-product-binding/tests/: test_rail.py  test_rail.yaml
examples/06-station-catalog/: README.md  litmus.yaml  pyproject.toml  pytest.ini  testerkit.yaml
examples/06-station-catalog/catalog/: generic_dmm.yaml  generic_psu.yaml
examples/06-station-catalog/drivers/: dmm.py  psu.py
examples/06-station-catalog/fixtures/: buck_3v3_bench.yaml
examples/06-station-catalog/parts/: buck_3v3.yaml
examples/06-station-catalog/stations/: bench_01.yaml
examples/06-station-catalog/tests/: test_rail.py  test_rail.yaml
examples/07-profiles/: README.md  litmus.yaml  pyproject.toml  pytest.ini  testerkit.yaml
examples/07-profiles/fixtures/: buck_3v3_bench.yaml
examples/07-profiles/profiles/: characterization.yaml  development.yaml  production.yaml  rail_family.yaml
examples/07-profiles/scripts/: seed_channels.py
examples/07-profiles/stations/: bench_01.yaml
examples/07-profiles/stations/types/: bench.yaml
examples/07-profiles/tests/: test_rail.py  test_rail.yaml
examples/08-waveform-evidence/: README.md  conftest.py  pyproject.toml  pytest.ini  testerkit.yaml
examples/08-waveform-evidence/drivers/: __init__.py  psu.py  scope.py
examples/08-waveform-evidence/tests/: test_psu_step_response.py
examples/09-instrument-streaming/: README.md  litmus.yaml  pyproject.toml
examples/09-instrument-streaming/drivers/: __init__.py  dmm.py
examples/09-instrument-streaming/scripts/: live_dmm_monitor.py  live_dmm_reader.py  live_monitor_ui.py
examples/09-instrument-streaming/stations/: bench_01.yaml
examples/10-artifacts-and-byte-streams/: README.md  conftest.py  pyproject.toml  pytest.ini  testerkit.yaml
examples/10-artifacts-and-byte-streams/drivers/: __init__.py  psu.py  scene.py
examples/10-artifacts-and-byte-streams/stations/: bench_01.yaml
examples/10-artifacts-and-byte-streams/tests/: test_burn_in.py
examples/11-querying-data/: README.md  litmus.yaml  pyproject.toml
examples/11-querying-data/scripts/: analyze.py  seed_runs.py
examples/12-parallel-sites/: README.md  pyproject.toml  pytest.ini  testerkit.yaml
examples/12-parallel-sites/drivers/: __init__.py
examples/12-parallel-sites/fixtures/: dual_site_bench.yaml
examples/12-parallel-sites/stations/: bench_dual.yaml
examples/12-parallel-sites/tests/: test_dual_rail.py  test_dual_rail.yaml
litmus/: __init__.py  cli.py  client.py  connect.py  environment.py  init.py  loaders.py  sbom.py  schema.py  schema_export.py  schemas.py  store.py  validation.py
schemas/: catalog.schema.json  fixture.schema.json  instrument_asset.schema.json  product.schema.json  project.schema.json  (+2 more)
(+1830 files in other folders)
