[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmus-test"
version = "0.1.0"
description = "Hardware test platform for the AI-assisted era"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Pragmatest" }
]
keywords = [
    "hardware-test",
    "pytest",
    "instrumentation",
    "pyvisa",
    "test-framework",
    "scpi",
    "openhtf",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering",
    "Framework :: Pytest",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pyvisa>=1.14",
    "pyvisa-sim>=0.6",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "click>=8.1",
    "nicegui>=2.0",
    "httpx>=0.28.1",
    "fastmcp>=2.0",
    "jinja2>=3.1",
    "ruamel-yaml>=0.19.1",
    "filelock>=3.12",
    "platformdirs>=4.0",
    "pytz>=2025.2",
    "duckdb>=1.5.0",
    "orjson>=3.9",
]

[project.optional-dependencies]
# Optional instrument library integrations
# Note: These are optional and not installed by default
# instrumentkit = ["instrumentkit>=1.0"]  # AGPL license, install manually if needed
pymeasure = ["pymeasure>=0.14"]
ni = ["nidaqmx>=0.9"]
lxi = ["zeroconf>=0.80"]
pdf = ["weasyprint>=62.0"]
sbom = ["cyclonedx-python-lib>=11.7"]
# Format exporters
stdf = ["Semi-ATE-STDF>=0.1"]
hdf5 = ["h5py>=3.0"]
tdms = ["npTDMS>=1.0"]
mdf4 = ["asammdf>=8.0"]
# Transports
s3 = ["boto3>=1.26"]
gcs = ["google-cloud-storage>=2.0"]
azure = ["azure-storage-blob>=12.0"]
sftp = ["paramiko>=3.0"]
grafana = [
    "buenavista>=0.5.0",
    "duckdb>=1.0",
]
# Bundles
all-exporters = ["litmus-test[stdf,hdf5,tdms,mdf4]"]

[project.urls]
Repository = "https://github.com/pragmatest-dev/litmus"
Issues = "https://github.com/pragmatest-dev/litmus/issues"

[project.scripts]
litmus = "litmus.cli:main"

[project.entry-points.pytest11]
litmus = "litmus.execution.plugin"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.4.0",
    "pyright",
    "pre-commit>=4.0",
    "duckdb>=1.4.4",
    "nisyscfg>=0.2",
    "playwright>=1.58.0",
    "pymupdf>=1.26.7",
    "pyserial>=3.5",
    "weasyprint>=62.0",
    "cyclonedx-python-lib>=11.0",
    "zeroconf>=0.80",
    "pytest-rerunfailures>=16.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/litmus"]

[tool.hatch.build.targets.sdist]
include = [
    "src/litmus",
    "tests",
    "examples",
    "docs",
    "schemas",
    "scripts",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "pyproject.toml",
]
exclude = [
    ".tmp",
    "results",
    "dist",
    "*.mp4",
    "*.pdf",
    "report_*.html",
]

[tool.uv.workspace]
members = [
    "examples/01-vanilla",
    "examples/02-verify",
    "examples/03-inline-limits",
    "examples/04-sidecar-markers",
    "examples/05-station-catalog",
    "examples/06-product-spec",
    "examples/07-profiles",
]

[tool.uv.sources]
litmus-example-01-vanilla = { workspace = true }
litmus-example-02-verify = { workspace = true }
litmus-example-03-inline-limits = { workspace = true }
litmus-example-04-sidecar-markers = { workspace = true }
litmus-example-05-station-catalog = { workspace = true }
litmus-example-06-product-spec = { workspace = true }
litmus-example-07-profiles = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-m 'not benchmark' --ignore=tests/test_e2e --strict-markers"
