[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "testerkit"
version = "0.3.1"
description = "Hardware test platform for the AI-assisted era"
dynamic = ["readme"]
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Pragmatest" }
]
keywords = [
    "hardware-test",
    "pytest",
    "instrumentation",
    "pyvisa",
    "test-framework",
    "scpi",
    "openhtf",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering",
    "Framework :: Pytest",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pyvisa>=1.14",
    "pyvisa-sim>=0.6",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "tsdownsample>=0.1.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "click>=8.1",
    "nicegui>=2.0",
    "httpx>=0.28.1",
    "fastmcp>=2.0",
    "jinja2>=3.1",
    "ruamel-yaml>=0.19.1",
    "filelock>=3.12",
    "platformdirs>=4.0",
    "pytz>=2025.2",
    "duckdb>=1.5.0",
    "orjson>=3.9",
    # pytest is a runtime dependency, not a dev tool — TesterKit is a
    # pytest plugin (see [project.entry-points.pytest11]), and the
    # starter project's tests + every tutorial expect `pytest` to be
    # importable + on PATH the moment `pip install testerkit` finishes.
    "pytest>=8.0",
]

[project.optional-dependencies]
# Optional instrument library integrations
# Note: These are optional and not installed by default
# instrumentkit = ["instrumentkit>=1.0"]  # AGPL license, install manually if needed
pymeasure = ["pymeasure>=0.14"]
ni = ["nidaqmx>=0.9"]
lxi = ["zeroconf>=0.80"]
pdf = ["weasyprint>=62.0"]
sbom = ["cyclonedx-python-lib>=11.7"]
# Format exporters
stdf = ["Semi-ATE-STDF>=0.1"]
hdf5 = ["h5py>=3.0"]
tdms = ["npTDMS>=1.0"]
mdf4 = ["asammdf>=8.0"]
grafana = [
    "buenavista>=0.5.0",
    "duckdb>=1.0",
]
# Richer `testerkit benchmark` capture (peak RAM + CPU %). Without it the
# benchmark still runs and reports throughput; the resource block is omitted.
benchmark = ["psutil>=5.9"]
# Bundles
all-exporters = ["testerkit[stdf,hdf5,tdms,mdf4]"]

[project.urls]
Repository = "https://github.com/pragmatest-dev/testerkit"
Issues = "https://github.com/pragmatest-dev/testerkit/issues"

[project.scripts]
testerkit = "testerkit.cli:main"

[project.entry-points.pytest11]
testerkit = "testerkit.pytest_plugin"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.4.0",
    "pyright",
    "pre-commit>=4.0",
    "duckdb>=1.4.4",
    "nisyscfg>=0.2",
    "playwright>=1.58.0",
    "pymupdf>=1.26.7",
    "pyserial>=3.5",
    "weasyprint>=62.0",
    "cyclonedx-python-lib>=11.0",
    "zeroconf>=0.80",
    "pytest-rerunfailures>=16.1",
    "psutil>=5.9",
]

# PyPI renders README.md without the rest of the repo, so relative
# links like ./docs/... and ./LICENSE 404 on pypi.org. The README in
# the source tree stays relative-link friendly (GitHub navigation
# works); this hook rewrites those to absolute URLs on the
# main branch when building the sdist / wheel for PyPI.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

# `](./` → `](https://github.com/pragmatest-dev/testerkit/blob/main/`
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\(\./'
replacement = '](https://github.com/pragmatest-dev/testerkit/blob/main/'

[tool.hatch.build.targets.wheel]
packages = ["src/testerkit"]

# Bundle the curated user-facing documentation tiers into the wheel as
# package data at ``testerkit/_docs/...``. This is what powers the in-app
# ``/docs/...`` operator UI for ``pip install``ed copies — without these
# rules, the docs path resolution ends up outside the package and
# returns 404. ``_internal/`` (audits, explorations) is intentionally
# omitted: contributor material, not user-facing.
[tool.hatch.build.targets.wheel.force-include]
"docs/tutorial" = "testerkit/_docs/tutorial"
"docs/integration" = "testerkit/_docs/integration"
"docs/concepts" = "testerkit/_docs/concepts"
"docs/how-to" = "testerkit/_docs/how-to"
"docs/reference" = "testerkit/_docs/reference"
"docs/_assets" = "testerkit/_docs/_assets"

[tool.hatch.build.targets.sdist]
include = [
    "src/testerkit",
    "tests",
    "examples",
    "docs",
    "schemas",
    "scripts",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "pyproject.toml",
]
exclude = [
    ".tmp",
    # Top-level ``data/`` is the per-developer parquet output dir
    # (gitignored). Scoped with a leading slash so the pattern doesn't
    # also strip ``src/testerkit/data/`` — the package subdirectory that
    # holds the event store, models, and parquet schemas. The earlier
    # unscoped ``data`` pattern shipped 0.1.0 / 0.1.1 wheels with a
    # missing ``testerkit.data`` subpackage; the pytest plugin imports
    # ``testerkit.data.models`` at module load and dies on a fresh
    # ``pip install``.
    "/data",
    "dist",
    "*.mp4",
    "*.pdf",
    "report_*.html",
]

[tool.uv.workspace]
members = [
    "examples/01-vanilla",
    "examples/02-verify",
    "examples/03-inline-limits",
    "examples/04-sidecar-markers",
    "examples/05-part-spec",
    "examples/06-station-catalog",
    "examples/07-profiles",
    "examples/08-waveform-evidence",
    "examples/09-instrument-streaming",
    "examples/10-artifacts-and-byte-streams",
    "examples/11-querying-data",
    "examples/12-parallel-sites",
]

[tool.uv.sources]
testerkit-example-01-vanilla = { workspace = true }
testerkit-example-02-verify = { workspace = true }
testerkit-example-03-inline-limits = { workspace = true }
testerkit-example-04-sidecar-markers = { workspace = true }
testerkit-example-05-part-spec = { workspace = true }
testerkit-example-06-station-catalog = { workspace = true }
testerkit-example-07-profiles = { workspace = true }
testerkit-example-08-waveform-evidence = { workspace = true }
testerkit-example-09-instrument-streaming = { workspace = true }
testerkit-example-10-artifacts-and-byte-streams = { workspace = true }
testerkit-example-11-querying-data = { workspace = true }
testerkit-example-12-parallel-sites = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-m 'not benchmark' --ignore=tests/test_e2e --strict-markers"
# Any warning is an error — a warning must be either expected (wrap the call in
# ``pytest.warns(...)``) or fixed. Scoped ``ignore`` entries below cover only
# genuinely-benign noise we cannot silence at the source.
filterwarnings = [
    "error",
    # Daemon subprocesses self-manage (PID-ref + idle-timeout) and INTENTIONALLY
    # outlive a test's synchronous teardown, so ``Popen.__del__`` emits a benign
    # "subprocess still running" ResourceWarning at GC — surfaced by pytest as an
    # unraisable-exception warning. It fires at GC (not a call site, so it can't
    # be ``pytest.warns``-wrapped) and is GC-timing-dependent (→ would flake the
    # gate). Scope-ignore just this Popen.__del__ noise; real ResourceWarnings
    # and other unraisable exceptions still error.
    'ignore:subprocess \d+ is still running:ResourceWarning',
    'ignore:Exception ignored in.*Popen\.__del__:pytest.PytestUnraisableExceptionWarning',
]
