[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bringup-example"
version = "0.1.0"
description = "Tier 1 Litmus example — bench bringup, no station or product YAML"
requires-python = ">=3.11"
dependencies = [
    "litmus-test",
    "pytest",
]

[tool.uv.sources]
litmus-test = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
