[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testerkit-example-01-vanilla"
version = "0.0.0"
description = "Stage 1: plain pytest tests — TesterKit plugin loaded for run records, no markers used yet"
requires-python = ">=3.11"
dependencies = ["pytest", "testerkit"]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.sources]
testerkit = { workspace = true }
