[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "station-example"
version = "0.1.0"
description = "Tier 2 Litmus example — station + product + fixture YAML"
requires-python = ">=3.11"
dependencies = [
    "litmus-test",
    "pytest",
    "pytest-rerunfailures",
]

[tool.uv.sources]
litmus-test = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["drivers"]
