[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmus-example-03-inline-limits"
version = "0.0.0"
description = "Stage 3: limits via @pytest.mark.litmus_limits decorator"
requires-python = ">=3.11"
dependencies = ["litmus-test", "pytest"]

[tool.uv.sources]
litmus-test = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
