[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "profiles-example"
version = "0.1.0"
description = "Tier 3 Litmus example — PMIC-A23 with profiles, multi-pin iteration, and binding-aware limits"
requires-python = ">=3.11"
dependencies = [
    "litmus-test",
    "pytest",
    "pytest-rerunfailures",
]

[tool.uv.sources]
litmus-test = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["drivers"]
