[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testerkit-example-04-sidecar-markers"
version = "0.0.0"
description = "Stage 4: move markers from @decorator to a sibling YAML sidecar"
requires-python = ">=3.11"
dependencies = ["testerkit", "pytest"]

[tool.uv.sources]
testerkit = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
