[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testerkit-example-06-station-catalog"
version = "0.0.0"
description = "Stage 6: station YAML + catalog + fixture connections — bench is config-driven; tests iterate ctx.connections"
requires-python = ">=3.11"
dependencies = ["testerkit", "pytest"]

[tool.uv.sources]
testerkit = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
