[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmus-example-07-profiles"
version = "0.0.0"
description = "Stage 7: profiles — scenarios as files with extends: chains"
requires-python = ">=3.11"
dependencies = ["litmus-test", "pytest"]

[tool.uv.sources]
litmus-test = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
