[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testerkit-example-07-profiles"
version = "0.0.0"
description = "Stage 7: profiles — scenarios as files with extends: chains"
requires-python = ">=3.11"
dependencies = ["testerkit", "pytest"]

[tool.uv.sources]
testerkit = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
