[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmus-example-08-waveform-evidence"
version = "0.0.0"
description = "Stage 8: waveform evidence — observe(Waveform) + verify(derived scalar)"
requires-python = ">=3.11"
dependencies = ["litmus-test", "pytest"]

[tool.uv.sources]
litmus-test = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
