[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testerkit-example-08-waveform-evidence"
version = "0.0.0"
description = "Stage 8: waveform evidence — observe(Waveform) + verify(derived scalar)"
requires-python = ">=3.11"
dependencies = ["testerkit", "pytest"]

[tool.uv.sources]
testerkit = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
