[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmus-example-10-artifacts-and-byte-streams"
version = "0.0.0"
description = "Stage 10: FileStore artifacts (PIL/bytes/Pydantic) + files.stream byte-stream sinks"
requires-python = ">=3.11"
dependencies = ["litmus-test", "pytest", "pillow", "pydantic"]

[tool.uv.sources]
litmus-test = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
