[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testerkit-example-11-querying-data"
version = "0.0.0"
description = "Stage 11: consumer-side / data-analyst usage — RunsQuery, MeasurementsQuery, channel queries"
requires-python = ">=3.11"
dependencies = ["testerkit"]

[tool.uv.sources]
testerkit = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
