[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litmus-example-12-parallel-sites"
version = "0.0.0"
description = "Stage 12: multi-site parallel testing — a 2-site fixture fans a bare pytest into two parallel site subprocesses"
requires-python = ">=3.11"
dependencies = ["litmus-test", "pytest"]

[tool.uv.sources]
litmus-test = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
