[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testerkit-example-12-parallel-sites"
version = "0.0.0"
description = "Stage 12: multi-site parallel testing — a 2-site fixture fans a bare pytest into two parallel site subprocesses"
requires-python = ">=3.11"
dependencies = ["testerkit", "pytest"]

[tool.uv.sources]
testerkit = { workspace = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
